Fix spacing for nav-home

--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -70,7 +70,7 @@
         color: $alpha
 
 .projects > .list > .item > .url,
-.papers > .list > .item > .url
+.papers > .list > .item > .url,
 .syllabus > .list > .item > .url    
     > .title
         display: inline
